--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@tanstack/react-query": "^4.16.1",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^5.0.0",
     "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
@@ -53,8 +54,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "node-sass": "^6.0.0",
+    "@types/react-dom": "^18.0.9",
+    "prettier": "2.7.1",
     "typescript": "^4.1.2",
     "typescript-plugin-css-modules": "^3.2.0",
     "web-vitals": "^1.0.1"
