--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
-    "cra-template-typescript-sass-modules": "0.2.1",
     "env-cmd": "^10.1.0",
     "i18next": "^22.0.6",
     "i18next-parser": "^7.0.3",
@@ -28,6 +27,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start-production": "env-cmd -f .env.production npm run-script start",
+    "build-dev": "env-cmd -f .env.development npm run-script build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "plop": "plop"
