--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-parser": "^7.0.3",
     "lodash.get": "^4.4.2",
+    "nprogress": "^0.2.0",
     "pdfjs-dist": "^3.0.279",
     "plop": "^3.1.1",
     "qs": "^6.11.0",
@@ -56,6 +57,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^18.0.9",
     "eslint": "^8.28.0",
